auto-test/tests/chapter_18/invalid_types/extra_credit/union_initializers/static_nested_init_not_const.c



union u {
    long l;
};

struct has_union {
    int a;
    union u b;
    char c;
};

long some_var = 10l;

struct has_union some_struct = {1,
                                {some_var},  
                                'a'};